tests/EnvironmentTests/data/BadVarRefTest.xpl
node[] main() {
  node[] x;
  y;
}
